force-app/main/default/objects/Genetic_Material_Events__c/Genetic_Material_Events__c.object-meta.xml
<CustomObject>
    <label>Genetic Material Event</label>
    <nameField>
        <displayFormat>GME{00000}</displayFormat>
        <label>Genetic Material Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Genetic Material Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>