force-app/main/default/objects/Genetic_Material_Events__c/fields/Donated_Egg_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Donated_Egg_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donated Egg Cohort</label>
    <referenceTo>Egg_Cohort__c</referenceTo>
    <relationshipLabel>Genetic Material Events (Donated Egg Cohort)</relationshipLabel>
    <relationshipName>Genetic_Material_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>