force-app/main/default/objects/Genetic_Material_Events__c/fields/Donated_Embryo_Batch__c.field-meta.xml
<CustomField>
    <fullName>Donated_Embryo_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Embryo Batch</label>
    <referenceTo>Embryo_Batch__c</referenceTo>
    <relationshipLabel>Genetic Material Events (Donated Embryo Batch)</relationshipLabel>
    <relationshipName>Genetic_Material_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>