force-app/main/default/objects/Genetic_Material_Events__c/fields/Donated_From__c.field-meta.xml
<CustomField>
    <fullName>Donated_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donated From</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Genetic Material Events</relationshipLabel>
    <relationshipName>Genetic_Material_Events</relationshipName>
    <type>Lookup</type>
</CustomField>