force-app/main/default/objects/Genetic_Material_Events__c/fields/Donated_Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Donated_Semen_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donated Semen Sample</label>
    <referenceTo>Semen_Sample__c</referenceTo>
    <relationshipLabel>Genetic Material Events (Donated Semen Sample)</relationshipLabel>
    <relationshipName>Genetic_Material_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>