force-app/main/default/objects/Genetic_Material_Events__c/fields/Donated_To__c.field-meta.xml
<CustomField>
    <fullName>Donated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donated To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Genetic Material Events (Donated To)</relationshipLabel>
    <relationshipName>Genetic_Material_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>