force-app/main/default/objects/Genetic_Material_Events__c/fields/Donation_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Event_Date__c</fullName>
    <label>Donation Event Date</label>
    <type>Date</type>
</CustomField>