force-app/main/default/objects/Genetic_Material_Events__c/fields/Egg_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Egg_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Egg Cohort</label>
    <referenceTo>Egg_Cohort__c</referenceTo>
    <relationshipLabel>Genetic Material Events</relationshipLabel>
    <relationshipName>Genetic_Material_Events</relationshipName>
    <type>Lookup</type>
</CustomField>