force-app/main/default/objects/Genetic_Material_Events__c/fields/Embryo_Batch__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Embryo Batch</label>
    <referenceTo>Embryo_Batch__c</referenceTo>
    <relationshipLabel>Genetic Material Events</relationshipLabel>
    <relationshipName>Genetic_Material_Events</relationshipName>
    <type>Lookup</type>
</CustomField>