force-app/main/default/objects/Genetic_Material_Events__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <formula>IF( Semen_Sample__r.Id   &lt;&gt;  &quot;&quot;, &quot;Semen Sample&quot;, 
IF( Embryo_Batch__c  &lt;&gt; &quot;&quot;, &quot;Embryo Batch&quot;,
IF( Egg_Cohort__c &lt;&gt;&quot;&quot;,&quot;Egg Cohort&quot;,&quot;Invalid Sample&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Type</label>
    <type>Text</type>
</CustomField>