force-app/main/default/objects/Genetic_Material_Events__c/fields/PGT_Embryo_Batch__c.field-meta.xml
<CustomField>
    <fullName>PGT_Embryo_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGT Embryo Batch</label>
    <referenceTo>Embryo_Batch__c</referenceTo>
    <relationshipLabel>Genetic Material Events (PGT Embryo Batch)</relationshipLabel>
    <relationshipName>Genetic_Material_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>