force-app/main/default/objects/Genetic_Material_Events__c/fields/Results_Entry_Witness__c.field-meta.xml
<CustomField>
    <fullName>Results_Entry_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Results Entry Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Genetic_Material_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>