force-app/main/default/objects/Genetic_Material_Events__c/fields/Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Semen Sample</label>
    <referenceTo>Semen_Sample__c</referenceTo>
    <relationshipLabel>Genetic Material Events</relationshipLabel>
    <relationshipName>Genetic_Material_Events</relationshipName>
    <type>Lookup</type>
</CustomField>