force-app/main/default/objects/Genetic_Material_Events__c/fields/Storage_Extended_To__c.field-meta.xml
<CustomField>
    <fullName>Storage_Extended_To__c</fullName>
    <label>Storage Extended To</label>
    <type>Date</type>
</CustomField>