force-app/main/default/objects/Genetic_Material_Events__c/recordTypes/Donation_Event.recordType-meta.xml
<RecordType>
    <fullName>Donation_Event</fullName>
    <active>true</active>
    <label>Donation Event</label>
</RecordType>