force-app/main/default/objects/Genetic_Material_Events__c/recordTypes/PGT_Result_Entry.recordType-meta.xml
<RecordType>
    <fullName>PGT_Result_Entry</fullName>
    <active>true</active>
    <label>PGT Result Entry</label>
</RecordType>