force-app/main/default/objects/Genetic_Material_Events__c/recordTypes/Storage_Extension.recordType-meta.xml
<RecordType>
    <fullName>Storage_Extension</fullName>
    <active>true</active>
    <label>Storage Extension</label>
</RecordType>